xidlc/tests/invalid/http_stream_bidi_typescript.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidTypescriptBidiStreamService {
    @bidi_stream
    @get(path = "/chat")
    void chat(
        in string room,
        in string text,
        out string from,
        out string reply
    );
};

